Add an example how to plot transcripts of a gene

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,12 @@
+```{r echo=FALSE}
+# This chunk contains some setup which we do not want to display in the final
+# document, hence `echo=FALSE` is used.
+# When you’re reading this document, it may be easier to ignore this chunk for
+# now, and continue with the document below, starting at “Introduction”
 
+# Make library loading silent
+library = function (...) suppressMessages(base::library(...))
+```
 
 # wiggleplotr
 Wiggleplotr is an R package to plot alternative transcript structures of a gene and RNA-Seq read coverage across them. A key feature of wiggleplotr is that it allows to scale introns to a fixed length. This feature greatly improves visualisation of alternative transcription events such as alternative promoter usage, alternative splicing and alternative 3’ end usage, because alternative exons are shown immediately adjacent to each other.
@@ -22,8 +30,7 @@ The `gene_exons` and `gene_cdss` lists as well as `plotting_annotations` data fr
 #### Example: plot protein coding transcripts of the NCOA7 gene
 First, you need to download Ensembl transcript annotations and metadata by following this [tutorial](https://github.com/kauralasoo/wiggleplotr/blob/master/download_annotations.md). Once the annotations have been downloaded, we can load them into R.
 
-
-```r
+```{r}
 library("devtools")
 library("GenomicFeatures")
 library("dplyr")
@@ -32,34 +39,20 @@ transcript_metadata = readRDS("transcript_metadata.rds")
 txdb78 = loadDb("TranscriptDb_GRCh38_78.db")
 ```
 Next, we extract exon and coding sequence (CDS) coordinates from the transcript database
-
-```r
+```{r}
 exons = exonsBy(txdb78, by = "tx", use.names = TRUE)
 cdss = cdsBy(txdb78, by = "tx", use.names = TRUE)
 ```
 We can also find all protein coding transcript of the TLR4 gene
-
-```r
+```{r}
 tlr4_tx = dplyr::filter(transcript_metadata, gene_name == "TLR4", transcript_biotype == "protein_coding")
 tlr4_tx
 ```
-
-```
-##     transcript_id         gene_id gene_name strand   gene_biotype
-## 1 ENST00000394487 ENSG00000136869      TLR4      1 protein_coding
-## 2 ENST00000355622 ENSG00000136869      TLR4      1 protein_coding
-##   transcript_biotype
-## 1     protein_coding
-## 2     protein_coding
-```
 Finally, we plot the exon structure of these two transcripts:
-
-```r
+```{r}
 tlr4_txids = tlr4_tx$transcript_id
 plotTranscripts(exons[tlr4_txids], cdss[tlr4_txids], transcript_metadata, rescale_introns = FALSE)
 ```
-
-![plot of chunk unnamed-chunk-5](figure/unnamed-chunk-5-1.png) 
 
 ### Plotting RNA-Seq read coverage
 The **wiggleplotr** command works similarly to plotTranscripts, but it requires an additional data frame that describes where the bigWig files containing the read coverage are located and how to the data should be plotted. If you do not have bigWig files yet, then you can learn how to create them here.
