--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ library = function (...) suppressMessages(base::library(...))
 Wiggleplotr is an R package to plot alternative transcript structures of a gene and RNA-Seq read coverage across them. A key feature of wiggleplotr is that it allows to scale introns to a fixed length. This feature greatly improves visualisation of alternative transcription events such as alternative promoter usage, alternative splicing and alternative 3’ end usage, because alternative exons are shown immediately adjacent to each other.
 
 ## Installation
-Wiggleplotr R package can we installed from GitHub.
+Wiggleplotr R package can we installed from GitHub. It requires the following R packages to be installed: girdExtra, ggplot2.
 
 ## Usage
 Wiggleplotr has two main functions: **plotTranscripts** that can be used to plot alternative transcripts of a gene, and **wiggleplotr** to plot RNA-Seq read coverage together with alternative transcripts.
@@ -36,12 +36,12 @@ library("GenomicFeatures")
 library("dplyr")
 load_all("../wiggleplotr/")
 transcript_metadata = readRDS("transcript_metadata.rds")
-txdb78 = loadDb("TranscriptDb_GRCh38_78.db")
+txdb79 = loadDb("data/TranscriptDb_GRCh38_79.db")
 ```
 Next, we extract exon and coding sequence (CDS) coordinates from the transcript database
 ```{r}
-exons = exonsBy(txdb78, by = "tx", use.names = TRUE)
-cdss = cdsBy(txdb78, by = "tx", use.names = TRUE)
+exons = exonsBy(txdb79, by = "tx", use.names = TRUE)
+cdss = cdsBy(txdb79, by = "tx", use.names = TRUE)
 ```
 We can also find all protein coding transcript of the TLR4 gene
 ```{r}
@@ -56,4 +56,13 @@ plotTranscripts(exons[tlr4_txids], cdss[tlr4_txids], transcript_metadata, rescal
 
 ### Plotting RNA-Seq read coverage
 The **wiggleplotr** command works similarly to plotTranscripts, but it requires an additional data frame that describes where the bigWig files containing the read coverage are located and how to the data should be plotted. If you do not have bigWig files yet, then you can learn how to create them here.
+
+The **wiggleplotr** function has eight parameters:
+* `exons` - list of GRanges objects, each object containing exons for one transcript. The list must have names that correspond to transcript IDs.
+* `sample_data` - data frame with the metadata for the bigWig read coverage files. Must contain the following columns: `sample_id` (unique id for each sample, if multiple bigWig files have the same sample id they will be overlayed on the same plot, will be used as facet label on the right), `bigWig` (path to the bigWig file), `library_size` (normalisation factor for each sample, useful if different samples sequences to different depth and bigWig files not normalised for that), `tissue` (additional column to group samples into, is used as the colour of the coverage track)
+* `cdss` (optional) - list of GRanges objects, each object containing the coding regions (CDS) of a single transcript. The list must have names that correspond to transcript IDs. If specified then coding and non-coding regions will be plotted in a different colour.
+* `transcript_annotations` - data frame with the following four columns: `transcript_id`, `gene_id`, `gene_name`, and `strand`. All of the transcripts in the exons and cdss lists must have a matching transcript ID in the transcript_id column. This data frame is used to add gene name and strand to the transcript structure plot.
+* `rescale_introns` - Specifies if the introns should be scaled to fixed length or not. (default: TRUE)
+* `new_intron_length` - length (bp) of introns after scaling. (default: 50)
+
 
